# sound-anomaly-detection

./: README.md  pyproject.toml  requirements.txt
anomaly_detection/: datasets.py  preprocess.py
anomaly_detection/audio_proc/: README.md  commands.py  dataset.py  device.py  iforest.py  iforest_test.py  iforest_train.py  predictions.csv  recorder.py  requirements.txt  train_iforest.onnx  write_sound.py  write_sound_2_mics.py
anomaly_detection/audio_proc_only_rec/: Dockerfile  README.md  commands.py  connection_move_s3.py  crontab_tasks.txt  recorder.py
anomaly_detection/datasets/: __init__.py  electric_engine.py  ice_dataset.py  mimiidue.py  mydataset.py  toyadmos.py
anomaly_detection/models/: FC_AE.py  STgram_MFN.py  cnn_ae.py  conv1d_AE.py
audio_proc_only_rec/: Dockerfile  README.md  commands.py  connection_move_s3.py  crontab_tasks.txt  recorder.py  recording_errors.txt  requirements.txt
ds_project/: dataset.py  datasets.py  preprocess.py
notebooks/: LOF_iForest_KNN.ipynb  MIMII_DUE_main_algorithms.ipynb  STgram.ipynb  Sound_Anomaly_detection.ipynb  conv1d_AE.ipynb  preprocess.py
