[tool.poetry]
name = "anomaly_detection"
version = "0.1.0"
description = "thesis project repository Sound Anomaly Detection"
authors = ["Alina Golkina"]
maintainers = ["Vladislav Goncharenko <vladislav.goncharenko@phystech.edu>"]
readme = "README.md"
repository = "https://github.com/AlinaGolkina/Sound_anomaly_detection"
documentation = "TBD"
keywords = ["anomaly detection", "data science"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.9"
pyaudio = "^0.2.12"
schedule = "^1.1.0"
scikit-learn = "^1.1.1"
skl2onnx = "^1.13"
librosa = "^0.9.2"
tqdm = "^4.64.1"
torch = "^1.13.0"
scipy = "^1.9.3"
numpy = "^1.23.4"
onnxruntime = "^1.13.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
fire = "^0.4.0"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
